# lua-dag-consensus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  deny.toml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
apps/cli/: Cargo.toml
apps/cli/src/: args.rs  main.rs  stub_context.rs
apps/cli/src/commands/: bench_aggregate.rs  inspect.rs  keygen.rs  mod.rs  replay_log.rs  verify.rs
apps/node/: Cargo.toml
apps/node/src/: action_applier.rs  args.rs  config.rs  config_layers.rs  devnet_keys.rs  host_context.rs  lib.rs  live_dag.rs  main.rs  orchestrator.rs  query.rs  rpc_server.rs  runtime.rs  shutdown.rs  signer.rs  timer.rs  validator_set_loader.rs
apps/node/src/blob/: mod.rs  rocks_store.rs
apps/node/src/l1/: driver.rs  mod.rs  parent.rs  vertex_builder.rs
apps/node/src/observability/: health.rs  metrics.rs  mod.rs  tracing.rs
apps/node/tests/: blob_custody_smoke.rs  blob_gossip_roundtrip.rs  blob_status_persist.rs  blob_status_rpc.rs  causal_set_rpc.rs  erasure_recovery.rs  l1_distributed_smoke.rs  l1_driver_smoke.rs  l1_gossip_roundtrip.rs  l3_gossip_smoke.rs  l3_local_actions.rs  node_smoke.rs  start_fails_closed_in_live_mode.rs  submit_blob_rpc.rs  vertex_cert_reject.rs
apps/sim/: Cargo.toml
apps/sim/src/: args.rs  keys.rs  lib.rs  main.rs  metrics.rs  replay.rs  vertex_factory.rs  virtual_beacon.rs  virtual_clock.rs  virtual_dag.rs  virtual_net.rs  virtual_persistence.rs  virtual_timer.rs  virtual_validator_set.rs  world.rs
apps/sim/src/adversary/: byzantine.rs  mod.rs  network.rs
apps/sim/src/checker/: liveness.rs  lock_macro.rs  mod.rs  safety.rs
apps/sim/src/scenarios/: anchor_dos.rs  byzantine_split.rs  equivocation_inject.rs  happy_path.rs  inactivity_leak.rs  mod.rs  mode_a_subnet.rs  mode_b_fallback.rs  network_partition.rs  vertex_cert_distributed.rs
apps/sim/tests/: basic_4node.rs  inactivity_leak.rs  micro_qc_fanout.rs  scenarios_l2.rs  vertex_factory_quorum.rs
config/: README.md  default.toml
crates/consensus/: Cargo.toml  README.md
crates/consensus/src/: action.rs  config.rs  error.rs  event.rs  host_context.rs  lib.rs  lock_macro.rs  prelude.rs  state_machine.rs
crates/consensus/src/api/: mod.rs  query.rs  tier.rs
crates/consensus/src/bullshark/: anchor.rs  commit.rs  linearize.rs  micro_qc.rs  mod.rs  wave.rs
crates/consensus/src/l2_minimal/: book.rs  mod.rs
crates/consensus/src/leader/: beacon.rs  mod.rs  reputation.rs  timeout.rs  vrf_sortition.rs
crates/consensus/src/macro_fin/: book.rs  checkpoint.rs  macro_qc.rs  messages.rs  mod.rs  proposer.rs  timer.rs  two_chain.rs  verify.rs  vote_book.rs  window.rs
crates/consensus/src/macro_fin/aggregation/: mod.rs  mode0_flat.rs  mode_a_subnet.rs  mode_b_leaderless.rs  subnet.rs
crates/consensus/src/ports/: clock.rs  dag_view.rs  mod.rs  pending_blobs.rs  persistence.rs  rng_beacon.rs  signer.rs  validator_set.rs
crates/consensus/src/slashing/: double_vote.rs  equivocation.rs  evidence.rs  inactivity_leak.rs  mod.rs  penalty.rs  surround.rs  vertex_equivocation.rs
crates/consensus/src/vertex_cert/: book.rs  mod.rs  verify.rs
crates/consensus/tests/: README.md  bullshark_anchor.rs  bullshark_checkpoint_hash.rs  bullshark_commit.rs  bullshark_happy.rs  bullshark_linearize.rs  config_defaults.rs  l2_minimal_book.rs  l2_minimal_happy.rs  lock_macro_invariant.rs  macro_fin_basic.rs  macro_fin_bls.rs  macro_fin_vrf.rs  slashing_detect.rs  step_signature.rs  vertex_cert_distributed.rs
crates/crypto/: Cargo.toml
crates/crypto/benches/: bls_verify.rs
crates/crypto/src/: error.rs  hash.rs  kdf.rs  lib.rs
crates/crypto/src/bls/: aggregate.rs  bitmap.rs  keys.rs  mod.rs  sign.rs
crates/crypto/src/dkg/: fingerprint.rs  mod.rs
crates/crypto/src/vrf/: ecvrf.rs  mod.rs  sortition.rs
crates/crypto/src/vrf/ecvrf/: mod.rs  rfc9381.rs
crates/crypto/tests/: bls_pop.rs  devnet_valset_toml.rs  vrf_determinism.rs
crates/dag/: Cargo.toml
crates/dag/src/: cert.rs  devnet.rs  lib.rs  signing.rs
crates/dag/src/blob/: chunk.rs  commit.rs  custody.rs  mod.rs  store.rs
crates/dag/src/da/: challenge.rs  mod.rs
crates/dag/src/erasure/: commit.rs  config.rs  error.rs  gf256.rs  mod.rs  rs.rs
crates/dag/tests/: blob_chunk_roundtrip.rs  cert_from_partials.rs  cert_roundtrip.rs  da_challenge.rs  erasure_roundtrip.rs
crates/net/: Cargo.toml
crates/net/src/: bridge.rs  config.rs  deterministic_key.rs  error.rs  gossip_wire.rs  identity.rs  lib.rs  swarm_runner.rs  transport.rs
crates/net/src/gossip/: codec.rs  mod.rs  publisher.rs  topics.rs
crates/net/src/peers/: discovery.rs  mod.rs  scoring.rs
crates/net/src/rpc/: causal_set.rs  checkpoint_sync.rs  mod.rs
crates/net/tests/: blob_gossip_roundtrip.rs  devnet_identity_golden.rs  devnet_loopback_gossip.rs  gossip_l3_roundtrip.rs  gossip_roundtrip.rs  peer_ban.rs
crates/storage/: Cargo.toml
crates/storage/src/: columns.rs  config.rs  db.rs  error.rs  gc.rs  keys.rs  lib.rs  persistence_impl.rs  snapshot.rs  wal.rs
crates/storage/src/stores/: blob_chunk_store.rs  blob_publish_store.rs  blob_status_store.rs  macro_store.rs  micro_store.rs  mod.rs  slash_store.rs  valset_store.rs  vertex_store.rs  vote_book_store.rs
crates/storage/tests/: blob_chunk_store.rs  blob_status_store.rs  crash_recovery.rs  pruning.rs  snapshot_roundtrip.rs
crates/types/: Cargo.toml
crates/types/src/: crypto_types.rs  error.rs  lib.rs  primitives.rs  slashing.rs
crates/types/src/codec/: borsh_impl.rs  mod.rs
crates/types/src/dag/: certified.rs  mod.rs  proposal.rs  refs.rs  vertex.rs
crates/types/src/macros/: checkpoint.rs  header.rs  mod.rs  proposal.rs  qc.rs
crates/types/src/micro/: checkpoint.rs  mod.rs  qc.rs
crates/types/src/validator/: dkg.rs  identity.rs  mod.rs  set.rs
crates/types/tests/: canonical_hash.rs  codec_roundtrip.rs
docker/: README.md
docs/: lua-dag-v2-whitepaper.tex
scripts/: README.md  devnet_e2e_smoke.ps1  devnet_e2e_smoke.sh
src/: lib.rs
tools/lua_dag_smoke/: Cargo.toml
tools/lua_dag_smoke/src/: main.rs
(+58 files in other folders)
