[workspace]
resolver = "2"
members  = [
    "crates/types",
    "crates/crypto",
    "crates/dag",
    "crates/consensus",
    "crates/net",
    "crates/storage",
    "apps/node",
    "apps/sim",
    "apps/cli",
]

[workspace.package]
edition      = "2024"
rust-version = "1.88"
license      = "Apache-2.0 OR MIT"
publish      = false
repository   = "https://github.com/1hoodlabs/lua-dag-consensus"
authors      = ["LUA-DAG contributors"]

[workspace.dependencies]
# --- core ---
borsh        = { version = "1.5", default-features = false, features = ["derive", "std"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "0.8"
thiserror    = "2"
anyhow       = "1"
hex          = "0.4"
smallvec     = { version = "1", features = ["serde", "union"] }
bytes        = "1"

# --- async / runtime (only used by `net`, `node`) ---
tokio        = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "net", "io-util"] }
futures      = "0.3"

# --- crypto (only used by `crypto`) ---
blst         = "0.3"
sha2         = "0.10"
blake3       = "1"
curve25519-dalek = "4"

# --- network (only used by `net`, `node`) ---
libp2p       = { version = "0.55", default-features = false, features = ["gossipsub", "quic", "tcp", "tls", "noise", "yamux", "macros", "tokio", "kad", "identify", "dns"] }

# --- storage (only used by `storage`, `cli`) ---
rocksdb      = { version = "0.22", default-features = false, features = ["snappy"] }

# --- observability (only used by `node`) ---
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus         = "0.13"

# --- http (only used by `node`) ---
axum         = { version = "0.7", default-features = false, features = ["http1", "json", "macros", "tokio"] }

# --- cli (only used by binaries) ---
clap         = { version = "4", features = ["derive", "env"] }

# --- test / dev ---
proptest     = "1"
rand         = "0.8"
rand_chacha  = "0.3"
tempfile     = "3"
reed-solomon-erasure = "6"

[workspace.lints.rust]
unsafe_code            = "deny"
unreachable_pub        = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
all      = { level = "deny",  priority = -1 }
pedantic = { level = "warn",  priority = -1 }
# pedantic exceptions we accept
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
must_use_candidate      = "allow"
return_self_not_must_use = "allow"

[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

[profile.bench]
opt-level     = 3
lto           = "thin"
debug         = true

[profile.dev]
opt-level = 0
debug     = true

[profile.test]
opt-level = 1
