[package]
name         = "cli"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "lua-dag"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
types       = { path = "../../crates/types" }
crypto      = { path = "../../crates/crypto" }
consensus   = { path = "../../crates/consensus" }
storage     = { path = "../../crates/storage" }
rocksdb     = { workspace = true }
borsh       = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
clap        = { workspace = true }
hex         = { workspace = true }
rand        = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
