[package]
name         = "node"
version      = "0.1.0"
default-run  = "node"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
name = "node"
path = "src/lib.rs"

[[bin]]
name = "node"
path = "src/main.rs"

[[bin]]
name = "print_devnet_peer_ids"
path = "src/bin/print_devnet_peer_ids.rs"

[features]
default = []
# Exposes `node::runtime::test_helpers::run_for_test` for integration tests.
test-helpers = []

[lints]
workspace = true

[dependencies]
types       = { path = "../../crates/types" }
crypto      = { path = "../../crates/crypto" }
dag         = { path = "../../crates/dag" }
consensus   = { path = "../../crates/consensus" }
net         = { path = "../../crates/net" }
storage     = { path = "../../crates/storage" }
borsh       = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
clap        = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus  = { workspace = true }
axum        = { workspace = true }
hex         = { workspace = true }

[dev-dependencies]
tempfile    = { workspace = true }
libp2p      = { workspace = true }
dag         = { path = "../../crates/dag" }
