[package]
name         = "sim"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "sim"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
types       = { path = "../../crates/types" }
crypto      = { path = "../../crates/crypto" }
dag         = { path = "../../crates/dag" }
consensus   = { path = "../../crates/consensus" }
borsh       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
clap        = { workspace = true }
rand        = { workspace = true }
rand_chacha = { workspace = true }
hex         = { workspace = true }
smallvec    = { workspace = true }
