[package]
name         = "consensus"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
types       = { path = "../types" }
crypto      = { path = "../crypto" }
dag         = { path = "../dag" }
borsh       = { workspace = true }
smallvec    = { workspace = true }
thiserror   = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }

[dev-dependencies]
proptest    = { workspace = true }
rand        = { workspace = true }
rand_chacha = { workspace = true }
