[package]
name         = "crypto"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
types       = { path = "../types" }
borsh       = { workspace = true }
thiserror   = { workspace = true }
hex         = { workspace = true }
blake3      = { workspace = true }
sha2        = { workspace = true }
blst        = { workspace = true }
curve25519-dalek = { workspace = true, features = ["digest", "rand_core"] }
rand        = { workspace = true }
rand_chacha = { workspace = true }

[dev-dependencies]
proptest    = { workspace = true }

[[bench]]
name    = "bls_verify"
harness = false

[[bench]]
name    = "bls_aggregate"
harness = false

[[bench]]
name    = "vrf_verify"
harness = false
