[package]
name         = "net"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
types       = { path = "../types" }
crypto      = { path = "../crypto" }
consensus   = { path = "../consensus" }
borsh       = { workspace = true }
thiserror   = { workspace = true }
tokio       = { workspace = true }
futures     = { workspace = true }
libp2p      = { workspace = true }
tracing     = { workspace = true }
serde       = { workspace = true }
hex         = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true, features = ["macros", "rt-multi-thread", "time", "sync"] }
