[package]
name         = "types"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
repository.workspace   = true
authors.workspace      = true

[lints]
workspace = true

[dependencies]
borsh      = { workspace = true }
serde      = { workspace = true }
thiserror  = { workspace = true }
hex        = { workspace = true }
smallvec   = { workspace = true }
bytes      = { workspace = true }
blake3     = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
