[package]
name         = "lua_dag_smoke"
version      = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "lua-dag-smoke"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
storage = { path = "../../crates/storage" }
